# kitewrt

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: openwrt-notes.md  rules-format.md  vless-format.md
examples/: rules-example.json
installer/: __main__.py  flows.py  parsers.py  ssh.py  steps.py  ui.py
installer/artifacts/: .gitignore  README.md
installer/resources/: kitewrt.init  singbox.init
kitewrt/: __main__.py  api.py  apply.py  autoselect.py  dataplane.py  deps.py  fetch.py  hub.py  killswitch.py  metrics_store.py  rules.py  schemas.py  security.py  state.py  subscriptions.py  vless.py  watchdog.py
kitewrt/routes/: __init__.py  connectivity.py  dns.py  exit_ip.py  meta.py  metrics.py  rules.py  server.py  subscriptions.py  vpn.py  ws.py
kitewrt/singbox/: __init__.py  clash.py  config.py  dns.py  outbound.py  route.py  service.py
kitewrt/static/: index.html
kitewrt/static/assets/: AreaChart-Be245zky.js  AreaChart-CBEhijHn.js  index-B-KMtxde.css  index-B7_cjSGr.js  index-DV1HjJ8W.js  index-Posy1UIT.css
scripts/: check_configs.py
tests/: test_api.py  test_apply.py  test_autoselect.py  test_clash.py  test_dataplane_singbox.py  test_examples_rules.py  test_fetch.py  test_installer_parsers.py  test_installer_singbox.py  test_installer_ssh.py  test_killswitch.py  test_metrics_store.py  test_rules_singbox.py  test_security.py  test_singbox_config.py  test_singbox_runtime.py  test_state.py  test_subscriptions.py  test_vless.py  test_watchdog.py  test_ws.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  format.ts  index.css  store.tsx  types.ts
web/src/components/: AreaChart.tsx  Dashboard.tsx  Settings.tsx  Subscriptions.tsx  ui.tsx
