[project]
name = "kitewrt"
version = "2.0.0"
description = "Web-managed VPN / transparent-proxy orchestrator for OpenWrt routers"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "voledyaev" }]
# OpenWrt 21.02 ships python 3.9 — keep the daemon 3.9-compatible.
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    # pydantic (via fastapi) can't evaluate PEP-604 `X | None` annotations on
    # python 3.9 without this; OpenWrt 21.02 ships 3.9.
    "eval_type_backport; python_version < '3.10'",
]

[project.optional-dependencies]
installer = [
    "asyncssh>=2.14",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15",
]

[project.urls]
Homepage = "https://github.com/voledyaev/kitewrt"

[project.scripts]
kitewrtd = "kitewrt.__main__:main"
kitewrt = "installer.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kitewrt*", "installer*"]

[tool.setuptools.package-data]
"kitewrt" = ["static/*"]
"installer" = ["resources/*", "artifacts/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["kitewrt", "installer", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes (the must-haves), I isort (import order),
# B flake8-bugbear (real-bug-class patterns), UP pyupgrade (Python 3.11+
# syntax modernisation). Deliberately conservative — adding SIM, C4,
# RUF, etc. is easy in a follow-up but they're stylistic and noisy
# without a slow burn-in.
select = ["E", "W", "F", "I", "B", "UP"]
# Keep E501 off because our long comments / load-bearing-paragraph
# docstrings would otherwise need awkward reflows.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests use bare asserts, redefine names freely, and import fixtures
# in ways ruff would flag in production code.
"tests/*" = ["B011", "F401", "F811"]
